terms, privacy, ry, rules in a basic way

--- a/app/views/pages/rules.html.erb
+++ b/app/views/pages/rules.html.erb
@@ -1,1 +1,9 @@
 <h1>Rules</h1>
+
+<ol>
+	<li>Be kind. Be a compassionate human being.</li>
+	<li>Don't say mean things. Don't hate.</li>
+	<li>Don't mention people by name.</li>
+	<li>Be yourself. Have fun.</li>
+	<li>If you see any inappropriate content, do let us know! We care about making and keeping this a special place.</li>
+</ol>
