--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,8 @@
 <div class="wrapper">
     <div class="koala">
-	    <%= link_to "click here", "http://www.google.com/", :class => "koala-link" %> <br/><br/><br/><br>
 		<%= link_to image_tag("koala.png", :class => "koala-image"), "http://www.google.com/" %>
-		<div class="other-links" style="display:none;">
-			<a href="mailto:founders@koala.rocks">Contact</a> |
+		<div class="other-links">
+			<a href="mailto:teamkoala@gmail.com">Contact</a> |
 			<%= link_to "Rules", :controller => "pages", :action => "rules" %> |
 			<%= link_to "Terms of Use", :controller => "pages", :action => "terms" %> |
 			<%= link_to "Privacy Policy", :controller => "pages", :action => "privacy" %>
