removed link from koala

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <div class="koala">
-		<%= link_to image_tag("koala.png", :class => "koala-image"), "http://www.google.com/" %>
+		<%= image_tag("koala.png", :class => "koala-image") %>
 		<div class="other-links">
 			<a href="mailto:teamkoala@gmail.com">Contact</a> |
 			<%= link_to "Rules", :controller => "pages", :action => "rules" %> |
